# ChangeLog for net-news/bnr2
# Copyright 2002-2004 Gentoo Technologies, Inc.; Distributed under the GPL v2
# $Header: /usr/local/ssd/gentoo-x86/output/net-news/cvs-repo/gentoo-x86/net-news/bnr2/Attic/ChangeLog,v 1.11 2004/05/08 02:14:37 dragonheart Exp $

*bnr2-0.13.3 (08 May 2004)

  08 May 2004; Daniel Black <dragonheart@gentoo.org> +metadata.xml,
  +bnr2-0.13.3.ebuild:
  version bump - bug #48005. notification by Daniel Webert <daniel_webert@web.de>

*bnr2-0.13.1 (28 Mar 2004)

  28 Mar 2004; Mike Frysinger <vapier@gentoo.org> :
  Version bump #45540 by Matthew.

*bnr2-0.13.0 (10 Mar 2004)

  10 Mar 2004; Mike Frysinger <vapier@gentoo.org> :
  Version bump #44131 by daniel webert.

*bnr2-0.12.7 (14 Feb 2004)

  14 Feb 2004; Mike Frysinger <vapier@gentoo.org> :
  Version bump #41474 by Sven Wegener.

*bnr2-0.12.5 (25 Dec 2003)

  25 Dec 2003; Mike Frysinger <vapier@gentoo.org> :
  Version bump #35806.

*bnr2-0.12.3 (29 Nov 2003)

  29 Nov 2003; Mike Frysinger <vapier@gentoo.org> :
  Version bump.

*bnr2-0.7.3 (12 Dec 2002)

  03 Jan 2003; Martin Holzer <mholzer@gentoo.org> bnr2-0.7.3.ebuild ChangeLog :
  Added RDEPEND="virtual/x11". Closes #12881.

  12 Dec 2002; phoen][x <phoenix@gentoo.org> ChangeLog, bnr2-0.7.3.ebuild,
  files/digest-bnr2-0.7.3 :
  Initial import.  Ebuild submitted by Per Wigren <wigren@home.se>.
  This closes bug #2722.