@@ -1,6 +1,9 @@
 # ChangeLog for net-news/bnr2
 # Copyright 2002-2004 Gentoo Technologies, Inc.; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/net-news/cvs-repo/gentoo-x86/net-news/bnr2/Attic/ChangeLog,v 1.11 2004/05/08 02:14:37 dragonheart Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/net-news/cvs-repo/gentoo-x86/net-news/bnr2/Attic/ChangeLog,v 1.12 2004/06/18 19:03:05 swegener Exp $
+
+  18 Jun 2004; Sven Wegener <swegener@gentoo.org> metadata.xml:
+  Assigned package to the net-news herd and added myself as primary maintainer.
 
 *bnr2-0.13.3 (08 May 2004)
 
